[package]
name = "merkle_root"
version = "0.1.0"
edition = "2021"

[dependencies]
base16ct = "0.2"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
rayon = "1.10.0"
sha2 = "0.10"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "merkle_root"
path = "src/lib.rs"

[[bin]]
name = "merkle_root"
path = "src/main.rs"
